--- a/javascrip_shope/style.css
+++ b/javascrip_shope/style.css
@@ -1,3 +1,4 @@
+
 .formulario{
     text-align: center;
     margin-top: 2rem;
@@ -15,4 +16,17 @@
     width: 400px;
     margin-bottom: 2rem;
 }
-   
+
+
+.btn{
+    margin-bottom: 25px;
+
+}
+
+#lucro_desejado{
+    width: 80px;
+}
+
+#valor_produto{
+    width: 80px;
+}
